--- a/app.css
+++ b/app.css
@@ -1,35 +1,39 @@
+/* Universal Selector */
+/* * {
+  color: red;
+} */
+
+/* Element Selector */
+/* h2 {
+  color: blue;
+} */
+
 /* p {
   color: gray;
   background-color: black;
 } */
 
-/* * {
-  color: red;
-}
-
-h2 {
-  color: blue;
-}
-
-.xyz {
+/* Class Selector */
+/* .xyz {
   color: orange;
-}
+} */
 
-#someVal {
+/* ID selector */
+/* #someVal {
   color: pink;
 } */
 
+/* Box Model */
 .xyz {
-  color: gray;
-
-  border: solid 5px rgb(150, 55, 55);
+  /* color: gray; */
+  /* border: solid 5px rgb(150, 55, 55); */
   /* border-radius: 10px; */
   /* border-top-right-radius: 10px; */
   /* border-left: solid 1px black;
   border-bottom: 1px solid black; */
   /* padding: 10px 2px; */
   /* padding-left: 10px; */
-  padding: 5px;
-  margin: 5px;
-  outline: 10px solid blue;
+  /* padding: 5px; */
+  /* margin: 5px; */
+  /* outline: 10px solid blue; */
 }
