--- a/app.css
+++ b/app.css
@@ -37,3 +37,147 @@
   /* margin: 5px; */
   /* outline: 10px solid blue; */
 }
+
+/* div {
+  height: 450px;
+  width: 450px;
+} */
+
+/* background image */
+body {
+  /* background-image: url("./images/paper.gif"); */
+  /* background-image: url("./images/img_tree.gif"), url("./images/paper.gif"); */
+  /* background-image: conic-gradient(red, yellow, green); */
+  /* background-image: linear-gradient(red, yellow, blue); */
+  /* background-image: radial-gradient(red, green, blue); */
+  /* background-image: repeating-conic-gradient(red 10%, yellow 20%); */
+  /* background-image: repeating-linear-gradient(red, yellow 10%, green 20%); */
+  /* background-image: repeating-radial-gradient(red, yellow 10%, green 15%); */
+}
+
+/* text-overflow */
+/* p.test {
+  white-space: nowrap;
+  width: 200px;
+  border: 1px solid #000000;
+  overflow: hidden;
+  text-overflow: ellipsis;
+} */
+/* 
+p.test1 {
+  width: 11em;
+  border: 1px solid #000000;
+  word-wrap: break-word;
+}
+
+p.test2 {
+  width: 11em;
+  border: 1px solid #000000;
+  word-break: break-all;
+} */
+
+/* .abs-len {
+  width: 1cm;
+} */
+
+/* div {
+  width: 500px;
+  border: solid 1px red;
+} */
+
+/* p {
+  width: 50%;
+} */
+
+/* .font-size {
+  font-size: 16px;
+  border: solid 1px red;
+}
+
+.font-size p {
+  color: red;
+  font-size: 2em;
+} */
+
+/* html,
+body {
+  font-size: 20px;
+} */
+
+/* .font-size {
+  height: 50vh;
+  width: 75vw;
+} */
+
+span,
+div {
+  border: solid 1px red;
+}
+
+/* div,
+span {
+  margin-top: 100px;
+  padding-left: 10px;
+  padding-top: 10px;
+  margin-left: 50px;
+} */
+
+/* div {
+  display: inline;
+  margin-top: 10px;
+} */
+
+/* span {
+  display: block;
+  margin-top: 10px;
+} */
+
+/* span {
+  display: inline-block;
+  margin-top: 10px;
+} */
+
+/* div {
+  margin-top: 10px;
+  display: inline-block;
+} */
+
+.container {
+  /* border: solid 1px red; */
+}
+
+/* header {
+  border: solid 2px green;
+  position: sticky;
+  top: 10px;
+  width: 100%;
+} */
+
+/* ----------------------------------- */
+
+.parent {
+  /* position: relative; */
+  /* top: 50px; */
+  /* left: 50px; */
+  /* border: solid 1px red; */
+  /* margin: 10px; */
+}
+
+/* .child {
+  position: absolute;
+  top: 100px;
+  border: solid 1px green;
+} */
+
+/* .super-parent {
+  position: relative;
+  border: blue solid 1px;
+} */
+
+/* ----------------------------------- */
+
+.opacity-demo {
+  /* Can take values in decimal and % */
+  /* opacity: 0.1; */
+  /* opacity: 10%; */
+}
