--- a/app.css
+++ b/app.css
@@ -109,10 +109,10 @@ body {
   width: 75vw;
 } */
 
-span,
+/* span,
 div {
   border: solid 1px red;
-}
+} */
 
 /* div,
 span {
@@ -180,4 +180,157 @@ span {
   /* Can take values in decimal and % */
   /* opacity: 0.1; */
   /* opacity: 10%; */
+}
+
+/* img {
+  width: 250px;
+  height: 100px;
+  border: solid 5px black;
+} */
+
+/* .fixed {
+  width: 100%;
+}
+
+.fixed h3 {
+  color: red;
+  border: solid 1px blue;
+  width: inherit;
+  box-sizing: border-box;
+  position: fixed;
+} */
+
+/* Table Demo */
+/* #customers {
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 20%;
+}
+
+#customers td,
+#customers th {
+  border: 1px solid #ddd;
+  text-align: center;
+  padding: 8px;
+}
+
+#customers th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: center;
+  background-color: #04aa6d;
+  color: white;
+} */
+
+/* float demo */
+/* .container img {
+  width: 250px;
+  height: 150px;
+  float: left;
+  margin-right: 10px;
+} */
+
+/* .text-align-demo {
+  text-align: right;
+} */
+
+/* text shadow demo */
+/* .text-shadow {
+  text-shadow: 2px 1px #e9d3d3;
+} */
+
+/* p.test1 {
+  white-space: nowrap;
+  width: 200px;
+  border: 1px solid #000000;
+  overflow: hidden;
+  text-overflow: clip;
+}
+
+p.test2 {
+  white-space: nowrap;
+  width: 200px;
+  border: 1px solid #000000;
+  overflow: hidden;
+  text-overflow: ellipsis;
+} */
+
+/* word break */
+/* p.test {
+  width: 11em;
+  border: 1px solid #000000;
+  word-wrap: break-word;
+  word-break: break-all;
+} */
+
+/* ol li {
+  list-style: lower-roman;
+} */
+
+.font-1 {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+
+.font-2 {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+/* transform */
+
+/* div.a {
+  width: 150px;
+  height: 80px;
+  background-color: yellow;
+  transform: rotate(20deg);
+}
+
+div.b {
+  width: 150px;
+  height: 80px;
+  background-color: yellow;
+  transform: skewY(20deg);
+}
+
+div.c {
+  width: 150px;
+  height: 80px;
+  background-color: yellow;
+  transform: scale(1.5);
+} */
+
+img {
+  width: 100px;
+  height: 100px;
+  background: red;
+  transition: width 2s;
+}
+
+#div1 {
+  transition-timing-function: linear;
+}
+#div2 {
+  transition-timing-function: ease;
+}
+#div3 {
+  transition-timing-function: ease-in;
+}
+#div4 {
+  transition-timing-function: ease-out;
+}
+#div5 {
+  transition-timing-function: ease-in-out;
+}
+
+img:hover {
+  width: 300px;
+}
+
+.alert1 {
+  background-color: olive;
+  padding: 10px;
+  font-size: 1.2em;
+  color: white;
+  margin: 10px;
+  border-radius: 6px;
 }
