--- a/app.css
+++ b/app.css
@@ -44,16 +44,16 @@
 } */
 
 /* background image */
-body {
-  /* background-image: url("./images/paper.gif"); */
-  /* background-image: url("./images/img_tree.gif"), url("./images/paper.gif"); */
-  /* background-image: conic-gradient(red, yellow, green); */
-  /* background-image: linear-gradient(red, yellow, blue); */
-  /* background-image: radial-gradient(red, green, blue); */
-  /* background-image: repeating-conic-gradient(red 10%, yellow 20%); */
-  /* background-image: repeating-linear-gradient(red, yellow 10%, green 20%); */
-  /* background-image: repeating-radial-gradient(red, yellow 10%, green 15%); */
-}
+/* body {
+  background-image: url("./images/paper.gif");
+  background-image: url("./images/img_tree.gif"), url("./images/paper.gif");
+  background-image: conic-gradient(red, yellow, green);
+  background-image: linear-gradient(red, yellow, blue);
+  background-image: radial-gradient(red, green, blue);
+  background-image: repeating-conic-gradient(red 10%, yellow 20%);
+  background-image: repeating-linear-gradient(red, yellow 10%, green 20%);
+  background-image: repeating-radial-gradient(red, yellow 10%, green 15%);
+} */
 
 /* text-overflow */
 /* p.test {
@@ -323,7 +323,7 @@ img {
 }
 
 img:hover {
-  width: 300px;
+  /* width: 300px; */
 }
 
 .alert1 {
@@ -333,4 +333,14 @@ img:hover {
   color: white;
   margin: 10px;
   border-radius: 6px;
+}
+
+.container {
+  border: solid 2px black;
+  /* position: relative; */
+}
+
+.relative {
+  position: relative;
+  top: 0;
 }
