--- a/demo-learning/src/app/card/card.component.html
+++ b/demo-learning/src/app/card/card.component.html
@@ -1,5 +1,8 @@
-<h3>This is heading of card</h3>
-<p>card works!</p>
-{{ heading }}
-{{ isPassed }}
-{{ studentObj.studName }}
+<div class="card text-dark bg-light mb-3" style="max-width: 18rem">
+  <div class="card-header">{{ product.productName }}</div>
+  <div class="card-body">
+    <h5 class="card-title">Light card title</h5>
+    <p class="card-text" *ngIf="product.isVeg === true">Veg</p>
+    <p class="card-text" *ngIf="product.isVeg === false">Non-Veg</p>
+  </div>
+</div>
