--- a/demo-learning/src/app/card/card.component.html
+++ b/demo-learning/src/app/card/card.component.html
@@ -1,8 +1,44 @@
-<div class="card text-dark bg-light mb-3" style="max-width: 18rem">
-  <div class="card-header">{{ product.productName }}</div>
+<div
+  class="card text-dark border-danger bg-light mb-3"
+  style="min-width: 16rem"
+>
+  <div class="card-header">
+    <h5>
+      {{ product.productName | lowercase }}
+    </h5>
+  </div>
   <div class="card-body">
-    <h5 class="card-title">{{ product.productDescription }}</h5>
-    <p class="card-text" *ngIf="product.isVeg === true">Veg</p>
-    <p class="card-text" *ngIf="product.isVeg === false">Non-Veg</p>
+    <p
+      class="card-title"
+      [ngStyle]="
+        product.isVeg === false ? { color: 'red' } : { color: 'green' }
+      "
+    >
+      {{ product.productDescription }}
+    </p>
+
+    <p>{{ product.productPrice | currency : "INR" }}</p>
+
+    <span class="card-text" *ngIf="product.isVeg === true">
+      <img src="../../assets/veg.png" alt="" />
+    </span>
+    <span class="card-text" *ngIf="product.isVeg === false">
+      <img src="../../assets/nonveg.jpg" alt="" />
+    </span>
+    <br />
+  </div>
+  <div class="card-footer d-flex flex-row-reverse">
+    <button type="button" class="btn btn-link">Detail</button>
+    <button
+      type="button"
+      (click)="addToCart(product)"
+      class="btn btn-primary rounded-0"
+    >
+      Add To Cart
+    </button>
   </div>
 </div>
+
+<!-- [ngStyle]="product.isVeg === false ? { color: 'red' } : { color: 'green' }" -->
+
+<!-- [ngClass]="{ 'text-success': product.isVeg === true, 'text-danger': product.isVeg === false }" -->
