--- a/demo-learning/src/app/heading/heading.component.html
+++ b/demo-learning/src/app/heading/heading.component.html
@@ -1,14 +1,17 @@
-<nav class="navbar navbar-dark bg-dark">
+<nav class="navbar navbar-dark bg-success">
   <a class="navbar-brand ms-2">Get Basket</a>
   <form class="form-inline d-flex">
     <input
-      class="form-control mr-sm-2"
+      class="form-control mr-sm-2 rounded-0"
       type="search"
       placeholder="Search"
       aria-label="Search"
     />
-    <button class="btn btn-outline-success mx-3 my-sm-0" type="submit">
+    <button class="btn btn-dark mx-1 my-sm-0 rounded-0" type="submit">
       Search
+    </button>
+    <button type="button" class="btn btn-primary mx-3 rounded-0">
+      <span class="badge badge-light">2</span>
     </button>
   </form>
 </nav>
