--- a/demo-learning/src/app/heading/heading.component.html
+++ b/demo-learning/src/app/heading/heading.component.html
@@ -11,7 +11,7 @@
       Search
     </button>
     <button type="button" class="btn btn-primary mx-3 rounded-0">
-      <span class="badge badge-light">2</span>
+      <span class="badge badge-light"> {{ getShoppingList() }}</span>
     </button>
   </form>
 </nav>
