--- a/demo-learning/src/app/app.component.html
+++ b/demo-learning/src/app/app.component.html
@@ -3,6 +3,10 @@
   <strong class="text-success"><i>Today:</i></strong>
   {{ getCurrentDate() | date : "medium" }}
 </p>
-<ss-product-list></ss-product-list>
+<div></div>
+<!-- <ss-product-list></ss-product-list> -->
+<router-outlet></router-outlet>
+
 <!-- <ss-login></ss-login> -->
-<!-- <router-outlet></router-outlet> -->
+<!-- <ss-add-product></ss-add-product> -->
+<!-- <ss-shopping-list></ss-shopping-list> -->
