--- a/demo-learning/src/app/product-list/product-list.component.html
+++ b/demo-learning/src/app/product-list/product-list.component.html
@@ -1,3 +1,10 @@
+<button
+  [routerLink]="['/add-product']"
+  type="submit"
+  class="float-end btn btn-primary rounded-0 me-3 mt-2"
+>
+  Add New Product
+</button>
 <div class="container mt-4">
   <div class="row">
     <div *ngFor="let prod1 of productList" class="col-md-3">
