--- a/demo-learning/src/app/login/login.component.html
+++ b/demo-learning/src/app/login/login.component.html
@@ -14,6 +14,8 @@
               type="text"
               class="form-control"
               id="username"
+              name="username"
+              [(ngModel)]="username"
               placeholder="Enter your username"
             />
           </div>
@@ -23,10 +25,16 @@
               type="password"
               class="form-control"
               id="password"
+              name="password"
+              [(ngModel)]="password"
               placeholder="Enter your password"
             />
           </div>
-          <button routerLink="/products" type="submit" class="btn btn-primary">
+          <button
+            (click)="authenticate()"
+            type="submit"
+            class="btn btn-primary"
+          >
             Login
           </button>
         </form>
